# preboot

./: WORKSPACE  npm-shrinkwrap.json  package.json
.circleci/: config.yml
src/lib/: BUILD.bazel
src/lib/angular/: BUILD.bazel  package.json  provider.ts
src/lib/api/: BUILD.bazel  event.recorder.spec.ts  event.recorder.ts  event.replayer.ts  inline.preboot.code.spec.ts  inline.preboot.code.ts  package.json  preboot.mocks.ts
src/lib/common/: BUILD.bazel  get-node-key.spec.ts  package.json
